# tabs_app

./: Cargo.toml  tabs.cfg
.github/: copilot-instructions.md
assets/fonts/: GoogleMaterialIcons.codepoints
assets/shaders/: abaa.wgsl  blur.wgsl
examples/: test.rs
src/: audio.rs  constants.rs  lib.rs  main.rs  states.rs
src/components/: mod.rs  string_timeline.rs
src/core/: config.rs  mod.rs  settings.rs  theme.rs  widgets.rs  window.rs
src/debug/: fps_counter.rs  mod.rs
src/file/: config.rs  mod.rs  settings.rs  song.rs  theme.rs
src/materials/: mod.rs
src/scenes/: gameplay.rs  mod.rs  song_selection.rs
src/shaders/: abaa.rs  blur.rs  mod.rs
src/widgets/: button.rs  card_button.rs  icons.rs  layers.rs  mod.rs  scrollable_container.rs  selectable.rs  ui_window.rs  widget.rs
