[package]
name = "tabs_app"
version = "0.1.0"
edition = "2021"

[features]
production = []

[dependencies]
bevy = { version = "0.17", features = ["serialize", "bevy_picking", "bevy_dev_tools", "bevy_winit"] }
winit = { version = "0.30.11" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
dirs = "6.0"
thiserror = "2.0"
kira = { version = "0.10.8", default-features = false, features = ["cpal", "ogg", "wav"] }
bevy_kira_audio = { version = "0.24", features = ["ogg", "wav"] }
symphonia = { version = "0.5.5", default-features = false, features = ["ogg", "vorbis", "wav", "pcm"] }
